--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,4 @@
+spring.config.import=file:env.properties
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
@@ -5,3 +6,4 @@ spring.datasource.password=2@rot48wDYA*
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql: true
 spring.jpa.hibernate.ddl-auto=create
+FRONTEND_DNS=${FRONTEND_DNS}
