--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.config.import=file:env.properties
+spring.config.import=optional:file:env.properties
 spring.datasource.url=${DB_DATABASE_URL}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql: true
-FRONTEND_DNS=${FRONTEND_DNS}
